Update answers controller | answers spec
